# marine-rs-sdk-test

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.circleci/: config.yml
.github/: renovate.json
.github/release-please/: config.json
.github/workflows/: e2e.yml  marine-rs-sdk-test.yml  publish_release.yml  release.yml  run-tests.yml  snapshot.yml  test.yml  tests.yml
crates/marine-build-rs-generator/: Cargo.toml
crates/marine-build-rs-generator/src/: lib.rs
crates/marine-test-macro/: Cargo.toml
crates/marine-test-macro-impl/: Cargo.toml
crates/marine-test-macro-impl/src/: attributes.rs  errors.rs  lib.rs
crates/marine-test-macro-impl/src/marine_test/: config_utils.rs  glue_code_generator.rs  marine_test_impl.rs  mod.rs  modules_linker.rs  token_stream_generator.rs  utils.rs
crates/marine-test-macro-impl/src/marine_test/token_stream_generator/: methods_generator.rs  methods_generator_utils.rs  record_type_generator.rs  service_generation_utils.rs  service_generator.rs
crates/marine-test-macro-impl/tests/: generation_tests_runner.rs  utils.rs
crates/marine-test-macro-impl/tests/generation_tests/empty_func/: expanded.rs
crates/marine-test-macro-impl/tests/generation_tests/mounted_binary/: Config.toml  expanded.rs
crates/marine-test-macro-impl/tests/generation_tests/multi-service-empty_mod/: Config.toml  expanded.rs  marine_test.rs
crates/marine-test-macro-impl/tests/generation_tests/multi-service-multiple/: expanded.rs
crates/marine-test-macro-impl/tests/generation_tests/multi-service-multiple/empty_func/: Config.toml
crates/marine-test-macro-impl/tests/generation_tests/multi-service-multiple/mounted_binary/: Config.toml
crates/marine-test-macro-impl/tests/generation_tests/multi-service-single/: expanded.rs
crates/marine-test-macro-impl/tests/generation_tests/multiple_modules/: Config.toml  expanded.rs
crates/marine-test-macro/src/: lib.rs
docs/: developer-notes.md
examples/build_rs/: Cargo.toml  Config.toml  build.rs
examples/build_rs/src/: main.rs
examples/multi-service/: Cargo.toml  build.sh
examples/multi-service/consumer/: Cargo.toml  Config.toml  build.sh
examples/multi-service/producer/: Cargo.toml  Config.toml  build.sh
examples/multi-service/src/: main.rs
examples/single-service/: Cargo.toml  Config.toml
examples/single-service/src/: main.rs
sdk-test/: Cargo.toml
src/: lib.rs
