[package]
name = "marine-rs-sdk-test"
version = "0.11.1"
description = "Backend SDK that allows testing modules for the Marine runtime"
documentation = "https://docs.rs/marine-rs-sdk-test"
repository = "https://github.com/fluencelabs/marine-rs-sdk-test"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "test"]
categories = ["api-bindings", "wasm", "development-tools::testing"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
doctest = false

[dev-dependencies]
trybuild = "1.0"

[dependencies]
marine-test-macro = { path = "crates/marine-test-macro", version = "=0.11.1" }
marine-build-rs-generator = { path = "crates/marine-build-rs-generator", version = "=0.11.1" }
fluence-app-service = { version = "0.31.0", features = ["raw-module-api"] }

serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }

[workspace]
members = [
    "crates/marine-test-macro",
    "crates/marine-test-macro-impl",
    "crates/marine-build-rs-generator",
    "examples/build_rs",
    "examples/single-service",
    "examples/multi-service",
    "examples/multi-service/consumer",
    "examples/multi-service/producer",
]
