[package]
name = "marine-test-macro-impl"
version = "0.8.1"
edition = "2018"
description = "Implementation of the `#[marine_test]` macro"
documentation = "https://docs.rs/fluence/marine-test-macro-impl"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/marine-test-macro-impl"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm", "development-tools::testing"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
fluence-app-service = { version = "0.23.1", features = ["raw-module-api"] }
marine-it-parser = "0.11.0"
itertools = "0.10.4"
darling = "0.14.3"
quote = "1.0.21"
proc-macro2 = "1.0.51"
proc-macro-error = { version = "1.0.4", default-features = false }
syn = { version = '1.0.100', features = ['full'] }
thiserror = "1.0.38"
static_assertions = "1.1.0"

[dev-dependencies]
marine-macro-testing-utils = "0.1.0"
