[package]
name = "marine-test-macro-impl"
version = "0.9.0"
edition = "2018"
description = "Implementation of the `#[marine_test]` macro"
documentation = "https://docs.rs/fluence/marine-test-macro-impl"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/marine-test-macro-impl"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm", "development-tools::testing"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
fluence-app-service = { version = "0.25.0", features = ["raw-module-api"] }
marine-it-parser = "0.12.0"
itertools = "0.10.5"
darling = "0.14.4"
quote = "1.0.26"
proc-macro2 = "1.0.56"
proc-macro-error = { version = "1.0.4", default-features = false }
syn = { version = '1.0.109', features = ['full'] }
thiserror = "1.0.39"
static_assertions = "1.1.0"

[dev-dependencies]
marine-macro-testing-utils = "0.1.0"
