[package]
name = "marine-test-macro-impl"
version = "0.11.1"
edition = "2018"
description = "Implementation of the `#[marine_test]` macro"
documentation = "https://docs.rs/fluence/marine-test-macro-impl"
repository = "https://github.com/fluencelabs/marine-rs-sdk/tree/master/crates/marine-test-macro-impl"
authors = ["Fluence Labs"]
keywords = ["fluence", "marine", "sdk", "webassembly", "procedural_macros"]
categories = ["api-bindings", "wasm", "development-tools::testing"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
fluence-app-service = { version = "0.31.0", features = ["raw-module-api"] }
marine-it-parser = "0.13.0"
itertools = "0.10.5"
darling = "0.20.1"
quote = "1.0.26"
proc-macro2 = "1.0.69"
proc-macro-error = { version = "1.0.4", default-features = false }
syn = { version = '2.0.15', features = ['full'] }
thiserror = "1.0.40"
static_assertions = "1.1.0"

[dev-dependencies]
marine-macro-testing-utils = "0.1.0"
