[package]
name = "build-rs-example"
version = "0.12.0"
authors = ["Fluence Labs"]
description = "The greeting module for the Fluence network"
repository = "https://github.com/fluencelabs/marine/tree/master/examples/build_rs"
edition = "2021"
publish = false

[[bin]]
name = "build_rs_test"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.12.0"

[dev-dependencies]
marine-rs-sdk-test = { path = "../.." }

[build-dependencies]
marine-rs-sdk-test = { path = "../.." }
