[package]
name = "single-service-example"
version = "0.13.0"
authors = ["Fluence Labs"]
description = "The greeting module for the Fluence network"
repository = "https://github.com/fluencelabs/marine/tree/master/examples/greeting"
edition = "2021"
publish = false

[[bin]]
name = "greeting"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.12.0"

[dev-dependencies]
marine-rs-sdk-test = { path = "../.." }
